--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Oregano&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,500&display=swap");
 
 * {
   box-sizing: border-box;
@@ -167,4 +168,226 @@ body {
 .btn-default:hover {
   background-color: #c3850d;
   text-decoration: underline;
+}
+
+@media (max-width: 600px) {
+  .welcome_content_caption {
+    font-size: 14px;
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+}
+
+/* About section custom css */
+
+.section_about {
+  margin-top: -50px;
+  background-color: #ffffff;
+  padding-top: 80px;
+}
+
+.section_title {
+  color: #1b2d2f;
+  font-size: 45px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  position: relative;
+  margin: 35px 0;
+  font-family: "Oregano", cursive;
+  z-index: 50000;
+}
+
+.section_about .section_title:before {
+  content: "Story";
+  position: absolute;
+  top: -75%;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  color: #e7e7e7;
+  font-size: 110px;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 20px;
+}
+
+.section_about .section_title > span {
+  z-index: 999;
+  position: relative;
+}
+
+.section_title_line {
+  border: none;
+  height: 5px;
+  width: 150px;
+  background: -webkit-linear-gradient(
+    left,
+    transparent 0%,
+    #f1ae2b 50%,
+    transparent 100%
+  );
+  background: linear-gradient(
+    to right,
+    transparent 0%,
+    #f1ae2b 50%,
+    transparent 100%
+  );
+}
+
+.section_caption {
+  text-align: center;
+  padding: 0 20%;
+  margin-bottom: 80px;
+  font-size: 15px;
+}
+
+@media (max-width: 767px) {
+  .section_title {
+    font-size: 25px;
+    margin: 10px 0;
+  }
+  .section_about .section_title:before {
+    font-size: 60px;
+    letter-spacing: 15px;
+  }
+
+  .section_about .section_caption {
+    font-size: 14px;
+    margin-bottom: 30px;
+    padding: 0 5%;
+  }
+}
+
+.section_about_row {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  flex-direction: row;
+  -webkit-box-align: center;
+  align-items: center;
+  background-color: #ffffff;
+}
+
+.section_about_row .about_img {
+  width: 50%;
+}
+
+.section_about_row .about_img img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.section_about_row .about_desc {
+  width: 50%;
+  padding: 0 100px;
+}
+
+.section_about_row .about_desc_title {
+  color: #1b2d2f;
+  font-size: 35px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 767px) {
+  .section_about_row {
+    margin-bottom: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    text-align: center;
+  }
+  .section_about_row .about_desc {
+    padding: 30px 15px;
+    width: 100%;
+  }
+  .section_about_row .about_img {
+    width: 100%;
+    order: -1;
+  }
+  .section_about_row .about_desc_title {
+    font-size: 30px;
+  }
+}
+
+/* slogan section */
+
+.section_slogan {
+  background: url(./img/hero.jpg) no-repeat center center / cover;
+  background-attachment: fixed;
+  padding: 100px 0;
+  text-align: center;
+  position: relative;
+}
+
+.section_slogan:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.section_slogan .slogan_title {
+  color: #f1ae2b;
+  font-size: 95px;
+  font-family: "Oregano", cursive;
+}
+
+.section_slogan .slogan_caption {
+  font-size: 19px;
+  color: #fff;
+  text-transform: uppercase;
+  line-height: 1.8em;
+  padding: 20px;
+}
+
+@media (max-width: 767px) {
+  .section_slogan .slogan_title {
+    font-size: 45px;
+  }
+  .section_slogan {
+    padding: 60px 0;
+    background-attachment: scroll;
+  }
+  .section_slogan .slogan_caption {
+    font-size: 15px;
+    padding: 15px;
+  }
+}
+
+.section_gallery {
+  background-color: #ffff;
+
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+
+.section_gallery .section_title:before {
+  content: "Gallery";
+  position: absolute;
+  top: -75%;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  color: #e7e7e7;
+  font-size: 110px;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 20px;
+  z-index: -1;
+}
+
+@media (max-width: 767px) {
+  .section_gallery .section_title:before {
+    font-size: 55px;
+    letter-spacing: 8px;
+  }
+  .section_gallery {
+    padding-bottom: 30px;
+  }
 }
