--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   font-size: 11px;
   font-weight: 700;
   letter-spacing: 1px;
+  z-index: 50;
 }
 
 .navbarDark {
@@ -200,7 +201,7 @@ body {
   position: relative;
   margin: 35px 0;
   font-family: "Oregano", cursive;
-  z-index: 50000;
+  z-index: 10;
 }
 
 .section_about .section_title:before {
@@ -395,4 +396,55 @@ body {
   .section_gallery {
     padding-bottom: 30px;
   }
+}
+
+/* gallery grid */
+
+.gallery__grid .gallery__item > a {
+  position: relative;
+  display: block;
+  text-decoration: none;
+}
+
+.gallery__grid .gallery__item {
+  padding: 10px;
+}
+
+.section_gallery .gallery__grid .gallery__item > a:before {
+  content: "";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(27, 45, 47, 0.6);
+}
+
+.gallery__grid .gallery__item > a:hover:before,
+.gallery__grid .gallery__item > a:hover:after {
+  opacity: 1;
+}
+
+.gallery__grid .gallery__item > a:before,
+.gallery__grid .gallery__item > a:after {
+  opacity: 0;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+  position: absolute;
+}
+
+.section_gallery .gallery__grid .gallery__item > a:after {
+  content: "\f002";
+  font-family: "Font Awesome 5 Free";
+  color: white;
+  font-weight: 900;
+  font-size: 25px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
