--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Oregano&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,600;0,700;1,500&display=swap");
 
 * {
   box-sizing: border-box;
@@ -47,13 +47,23 @@ body {
 
 .navbar-dark .navbar-nav .active > .nav-link {
   color: #f1ae2b !important;
-  border-bottom: 2px solid #f1ae2b !important;
+  border-bottom: 3px solid #f1ae2b !important;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
   color: #f1ae2b !important;
-  border-bottom: 2px solid #f1ae2b !important;
+  border-bottom: 3px solid #f1ae2b !important;
   transition-duration: 0.3s;
+}
+
+.navbar-nav .dropdown-menu .dropdown-item {
+  font-size: 13px !important;
+  background-color: transparent;
+}
+
+.navbar-nav .dropdown-menu .dropdown-item:hover {
+  color: #f1ae2b !important;
+  font-size: 13px !important;
 }
 
 @media (max-width: 765px) {
@@ -679,5 +689,215 @@ img {
 
   .section_footer hr {
     margin: 10px 0 30px;
+  }
+}
+
+/* about page header section */
+
+.section_header {
+  height: 40vh;
+  width: 100%;
+  padding: 0;
+  position: relative;
+}
+
+.section_header:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.section_header .container {
+  height: 100%;
+  padding-top: 70px;
+}
+
+.section_header .container .section__heading {
+  color: white;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  letter-spacing: 0.03em;
+  padding-top: 20px;
+}
+
+.section_header .about_bg {
+  background-image: url(./img/hero.jpg);
+}
+
+.section_header .section_header__bg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -999;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.section_header .container .section__heading {
+  color: white;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  letter-spacing: 0.03em;
+  font-family: "Oregano", cursive;
+  margin-top: 21px;
+}
+
+.breadcrumb {
+  text-align: center !important;
+  font-size: 15px;
+  margin-top: -20px;
+}
+
+.breadcrumb > .active {
+  color: #ffffff;
+}
+
+.breadcrumb {
+  background-color: transparent;
+  justify-content: center;
+}
+
+.breadcrumb > li + li:before {
+  content: "/\00a0";
+  padding: 0 5px;
+  color: #cccccc;
+}
+
+a {
+  color: #f1ae2b;
+  text-decoration: none;
+}
+
+a:hover,
+a:focus {
+  color: #c3850d;
+  text-decoration: underline;
+}
+
+/* story section */
+.section_story {
+  padding: 10px 0 20px 0;
+  text-align: center;
+  background-color: rgba(240, 240, 240, 0.6);
+}
+
+.section_story__quote {
+  margin-top: 60px;
+}
+
+.section_story__quote .qoute__title {
+  color: #1b2d2f;
+  font-family: "Oregano", cursive;
+  margin-top: 21px;
+  margin-bottom: 10.5px;
+}
+
+.section_story__quote .qoute__text {
+  margin: 0 0 10.5px;
+  font-family: "Raleway", sans-serif;
+  font-size: 15px;
+  line-height: 1.42857143;
+  color: #666666;
+}
+
+.section_story__quote .qoute__author {
+  font-family: "Oregano", cursive;
+  color: #f1ae2b;
+  font-size: 19px;
+}
+
+@media (max-width: 767px) {
+  .section_header .container .section__heading {
+    font-size: 30px;
+    margin-bottom: 10px;
+    margin-top: 0;
+  }
+  .section_story {
+    padding: 0px 0px 20px 0;
+  }
+  .section_story__quote {
+    margin-top: 30px;
+  }
+}
+
+/* contact page */
+
+.section_caption {
+  text-align: center;
+  padding: 0 20%;
+  margin-bottom: 80px;
+  font-family: "Raleway", sans-serif;
+  line-height: 1.42857143;
+  color: #666666;
+}
+
+.section_contacts__item {
+  text-align: center;
+  padding: 60px 20px;
+  margin-bottom: 35px;
+  border: 1px solid #eee;
+  box-shadow: 0px 5px 20px 0px rgba(99, 99, 99, 0.2);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.section_contacts__item .item__title {
+  color: #1b2d2f;
+  margin-top: 10px;
+  font-family: "Raleway", sans-serif;
+}
+
+.section_contacts__item > i {
+  color: #f5f5f5;
+  font-size: 60px;
+  margin: 20px 0;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+
+.section_contacts__item .item__content {
+  margin: 10px 0;
+  color: #1b2d2f;
+}
+
+.section_contacts__item:hover > i {
+  color: #f1ae2b;
+}
+
+.section_contacts__item .contact_social__item {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.section_contacts__item a {
+  color: #1b2d2f;
+}
+
+.section_contacts__item a:hover {
+  color: #f1ae2b;
+}
+
+.section_contacts {
+  padding: 80px 0;
+}
+
+.section_map-heading .contacts_form__body {
+  padding: 10px 100px 50px 100px;
+  margin: 0 50px;
+}
+
+@media (max-width: 767px) {
+  .section_map-heading .contacts_form__body {
+    padding: 0 0 50px 0;
+    margin: 0 30px;
   }
 }
