--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Oregano&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,600;0,700;1,500&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;1,700&display=swap");
 * {
   box-sizing: border-box;
   padding: 0;
@@ -9,6 +8,37 @@
 body {
   font-family: "Raleway", sans-serif;
   background-color: #ffffff;
+}
+
+/* button style to scroll top */
+.back-to-top {
+  cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000000;
+  display: none;
+  -webkit-transition: none !important;
+  transition: none !important;
+}
+
+.btn-primary {
+  color: #ffffff;
+  background-color: #f1ae2b;
+  border-color: #efa513;
+  border-radius: 50rem !important;
+}
+
+.btn-primary:hover {
+  color: #ffffff;
+  background-color: #eeb84d;
+  border-color: #efa513;
+}
+
+.btn-primary:active {
+  color: #ffffff !important;
+  background-color: #946b1a !important;
+  border-color: #efa513 !important;
 }
 
 /* navbar custom css */
@@ -899,5 +929,141 @@ a:focus {
   .section_map-heading .contacts_form__body {
     padding: 0 0 50px 0;
     margin: 0 30px;
+  }
+}
+
+/* Restaurant Menu */
+
+.section_menu {
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+
+.tab {
+  float: left;
+  background-color: #f1ae2b !important;
+  width: 21%;
+  font-family: "Raleway", sans-serif;
+  font-size: 15px;
+}
+
+.tab button.active {
+  background-color: Black !important;
+}
+
+.tab button {
+  display: block;
+  font-family: "Raleway", sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-color: inherit;
+  color: white !important;
+  padding: 14px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.1s;
+  border: 1px solid;
+}
+
+.tabcontent {
+  float: left;
+  padding: 0px 12px;
+  width: 79%;
+  border-left: none;
+}
+
+.section_menu .menu__text-grid .menu__item > h3 {
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: left;
+  color: #1b2d2f;
+  margin-top: 0;
+  position: relative;
+  font-size: 19px;
+  border-bottom: 1px dashed #1b2d2f;
+  padding: 10px 0;
+}
+
+.section_menu .menu__text-grid .menu__item .dish_info {
+  font-size: 15px;
+}
+
+.section_menu .menu__text-grid .menu__item > h3 > .price {
+  color: #f1ae2b;
+  float: right;
+  font-weight: 400;
+  margin-top: -12px;
+  font-size: 27px;
+  font-family: "Oregano", cursive;
+}
+
+.section_menu .menu__text-grid .menu__item > h3 {
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: left;
+  color: #1b2d2f;
+  margin-top: 0;
+  position: relative;
+  font-size: 19px;
+  border-bottom: 1px dashed #1b2d2f;
+  padding: 10px 0;
+  font-family: "Oregano", cursive;
+}
+
+.section_menu .container {
+  content: " ";
+  display: table;
+}
+
+.section_menu .menu__text-grid .menu__item {
+  padding: 10px 20px;
+}
+
+@media (max-width: 767px) {
+  .tab {
+    width: 27%;
+  }
+  .tabcontent {
+    width: 73%;
+  }
+  .section_menu .menu__text-grid .menu__item > h3 > .price {
+  }
+  .tab button {
+    font-size: 11px;
+    padding: 7px 7px;
+  }
+  .section_menu .menu__text-grid .menu__item > h3 {
+    font-size: 13px;
+  }
+  .section_menu .menu__text-grid .menu__item > h3 .price {
+    font-size: 15px;
+  }
+  .section_menu {
+    padding-top: 50px;
+    padding-bottom: 40px;
+  }
+}
+
+/* takwaway Menu */
+.section_caption {
+  text-align: center;
+  padding: 0 20%;
+  margin-bottom: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section_caption a img {
+  vertical-align: middle;
+}
+
+@media (max-width: 767px) {
+  .section_caption {
+    padding: 0 10%;
+    margin-bottom: 30px;
   }
 }
